--- a/main.html
+++ b/main.html
@@ -8,13 +8,9 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div class="box"><p>This is center</p></div>
     <script type="text/javascript" src="./script.js">
 </script>
-<div class="container">
-  <div class="box">
-    <p>This is center</p>
-  </div>
-</div>
 
 </body>
 
